compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__suggest_wrapping_a_use_returned_value_in_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() -> Result(Int, Bool) {\n  use <- want_result\n  False\n}\n\npub fn want_result(wibble: fn() -> Result(Int, Bool)) {\n  todo\n}\n"
---
----- SOURCE CODE

pub fn main() -> Result(Int, Bool) {
  use <- want_result
  False
}

pub fn want_result(wibble: fn() -> Result(Int, Bool)) {
  todo
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:3
  │
4 │   False
  │   ^^^^^ Did you mean to wrap this in an `Error`?

Expected type:

    Result(Int, Bool)

Found type:

    Bool
